fixed white space (for now)

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
   }
   
   body {
-    height: 256px;
+    height: 1080px;
   }
   
   .webTitle {
@@ -96,7 +96,7 @@
   }
   
   body {
-    height: 256px;
+    height: 1080px;
   }
   
   .webTitle {
